Remove URI handler on Windows Closes #266

--- a/ant/windows/windows-packager.nsi.in
+++ b/ant/windows/windows-packager.nsi.in
@@ -172,6 +172,9 @@ Section "Uninstall"
   DeleteRegKey HKLM "Software\Microsoft\Windows\CurrentVersion\Uninstall\${project.name}"
   DeleteRegKey HKLM "Software\${project.name}"
 
+  ; Remove URI handler
+  DeleteRegKey HKCR "${vendor.name}"
+
   Delete "$DESKTOP\${project.name}.url"
   Delete "$DESKTOP\${project.name}.lnk"
 
