--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,3 @@
-language: java
-sudo: false
 matrix:
   include:
     - jdk: oraclejdk8
@@ -9,11 +7,8 @@ matrix:
     - os: osx
       osx_image: xcode8.2
       env: TARGET=pkgbuild
-addons:
-    apt:
-        packages:
-            - makeself
-            - nsis
+language: java
 before_script:
     - sw_vers -productVersion && brew update && brew install ant; ant -version
-script: _SILENT_JAVA_OPTIONS="${_JAVA_OPTIONS}"; unset _JAVA_OPTIONS; ant $TARGET
+    - test -e /etc/lsb-release && sudo apt-get update -qq && sudo apt-get install -y makeself nsis; echo;
+script: ant $TARGET
