--- a/ant/apple/apple-postinstall.sh.in
+++ b/ant/apple/apple-postinstall.sh.in
@@ -47,6 +47,10 @@ EOT
 printf 1 > "${apple.installdir}/.autostart"
 chmod 777 "${apple.installdir}/.autostart"
 
+# Shared directory for FileIO operations
+mkdir -p "/Library/Application Support/${vendor.name}" 2>&1
+chmod 666 "/Library/Application Support/${vendor.name}"
+
 # Cleanup resources from previous versions
 rm -rf "${apple.installdir}/demo/js/3rdparty"
 rm "${apple.installdir}/demo/js/qz-websocket.js"
