--- a/ant/linux/linux.properties
+++ b/ant/linux/linux.properties
@@ -13,10 +13,15 @@ linux.installer.name=linux-installer.sh
 linux.installer.in=${basedir}/ant/linux/${linux.installer.name}.in
 linux.installer.out=${dist.dir}/${linux.installer.name}
 
+linux.launcher.name=linux-launcher.sh
+linux.launcher.in=${basedir}/ant/linux/${linux.launcher.name}.in
+linux.launcher.out=${dist.dir}/${linux.launcher.name}
+
 linux.uninstall.in=${basedir}/ant/linux/linux-uninstall.sh.in
 linux.uninstall.out=${dist.dir}/uninstall
 
 linux.installdir=/opt/${project.filename}
+linux.datadir=.qz
 
 linux.packager.name=linux-packager.sh
 linux.packager.in=${basedir}/ant/linux/${linux.packager.name}.in
