--- a/ant/linux/linux.properties
+++ b/ant/linux/linux.properties
@@ -21,7 +21,8 @@ linux.uninstall.in=${basedir}/ant/linux/linux-uninstall.sh.in
 linux.uninstall.out=${dist.dir}/uninstall
 
 linux.installdir=/opt/${project.filename}
-linux.datadir=.qz
+linux.datadir.local=$HOME/.${project.datadir}
+linux.datadir.shared=/srv/${project.datadir}
 
 linux.packager.name=linux-packager.sh
 linux.packager.in=${basedir}/ant/linux/${linux.packager.name}.in
