--- a/ant/apple/apple-launcher.sh.in
+++ b/ant/apple/apple-launcher.sh.in
@@ -17,13 +17,31 @@
 installpath=$(echo "$0" | rev | cut -d/ -f4- | rev)
 jarpath=$installpath/${project.filename}.jar
 iconpath=$installpath/${apple.resources}/${apple.icon}
+localautostart="${apple.datadir.local}/autostart"
+globalautostart="${apple.datadir.shared}/autostart"
 ${apple.jvmver} > /dev/null 2>&1
 fallback=$?
 
 # If launched at startup, check override first
-if [[ "$1" == "--autostart" ]] && [[ "$(cat "$installpath/.autostart")" == "0" ]]; then
-    echo "Skipping autostart"
-    exit 0
+if [ "$1" = "-A" ]
+then
+    if [ -f "$localAutostart" ];
+    then
+        if [ "$(head -n 1 $localautostart)" = "0" ]
+        then
+           echo "Skipping autostart"
+           exit 0
+        fi
+    else
+        if [ -f "$globalautostart" ];
+        then
+            if [ "$(head -n 1 $globalautostart)" = "0" ]
+            then
+                echo "Skipping autostart"
+                exit 0
+            fi
+        fi
+    fi
 fi
 
 # Fallback on Internet Plug-Ins version if needed
