--- a/ant/project.properties
+++ b/ant/project.properties
@@ -27,6 +27,7 @@ dist.jar=${dist.dir}/${project.filename}.jar
 authcert.name=override.crt
 authcert.build=${dist.dir}/${authcert.name}
 authcert.install=!install/${authcert.name}
+autostart.name=.autostart
 
 jar.compress=true
 jar.index=true
