--- a/ant/windows/windows-launcher.nsi.in
+++ b/ant/windows/windows-launcher.nsi.in
@@ -106,7 +106,7 @@ Function DetermineAutostart
   LocalAutostart:
   ClearErrors
   ReadEnvStr $R0 "APPDATA"
-  FileOpen $1 "$R0\${project.datadir}\autostart" r
+  FileOpen $1 "$R0\${project.datadir}\${autostart.name}" r
   FileSeek $1 0
   FileRead $1 $AUTOSTART
   FileClose $1
@@ -117,7 +117,7 @@ Function DetermineAutostart
   SharedAutostart:
   ClearErrors
   ReadEnvStr $R0 "PROGRAMDATA"
-  FileOpen $2 "$R0\${project.datadir}\autostart" r
+  FileOpen $2 "$R0\${project.datadir}\${autostart.name}" r
   FileSeek $2 0
   FileRead $2 $AUTOSTART
   FileClose $2
