Fix quotes, simplify logic, better debug

--- a/ant/apple/apple-launcher.sh.in
+++ b/ant/apple/apple-launcher.sh.in
@@ -23,24 +23,16 @@ ${apple.jvmver} > /dev/null 2>&1
 fallback=$?
 
 # If launched at startup, check override first
-if [ "$1" = "-A" ]
-then
-    if [ -f "$localAutostart" ];
-    then
-        if [ "$(head -n 1 $localautostart)" = "0" ]
-        then
-           echo "Skipping autostart"
-           exit 0
-        fi
+if [ "$1" = "-A" ]; then
+    echo "Autostart switch '-A' was provided"
+    if [ -f "$localautostart" ] && [ "$(head -n 1 "$localautostart")" = "0" ]; then
+        echo "Skipping autostart per '$localautostart'"
+        exit 0
+    elif [ -f "$globalautostart" ] && [ "$(head -n 1 "$globalautostart")" = "0" ]; then
+        echo "Skipping autostart per '$globalautostart'"
+        exit 0
     else
-        if [ -f "$globalautostart" ];
-        then
-            if [ "$(head -n 1 $globalautostart)" = "0" ]
-            then
-                echo "Skipping autostart"
-                exit 0
-            fi
-        fi
+        echo "No autostart conflicts found in '$localautostart' or '$globalautostart'.  Starting."
     fi
 fi
 
